--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,38 @@ services:
     volumes:
       - mongo_data:/data/db
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"      # Puerto de RabbitMQ para la comunicación con la aplicación
+      - "15672:15672"    # Puerto de la interfaz de administración de RabbitMQ
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+
   app:
     build: .
     container_name: app
     environment:
       - PORT=3000
       - MONGO_URI=mongodb://root:example@mongo:27017/
+      - RABBITMQ_URL=amqp://user:password@rabbitmq:5672  # URL de conexión a RabbitMQ
     ports:
       - "3000:3000"
     depends_on:
       - mongo
-    command: npx ts-node src/app.ts
+      - rabbitmq
+    command: npx ts-node -r tsconfig-paths/register src/app.ts
+
+  consumer:
+    build: .
+    container_name: consumer
+    environment:
+      - RABBITMQ_URL=amqp://user:password@rabbitmq:5672  # URL de conexión a RabbitMQ
+    depends_on:
+      - rabbitmq
+    command: npx ts-node -r tsconfig-paths/register src/consumers/identityValidator.ts
 
 volumes:
   mongo_data:
