--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "description": "Bio-sdk backend services",
   "main": "index.js",
   "scripts": {
-  "build": "tsc",
-  "start": "node dist/app.js",
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "start:consumer": "ts-node src/consumers/identityValidator.ts",
     "test": "mocha --require ts-node/register 'src/tests/**/*.spec.ts'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express-serve-static-core": "^5.0.1",
+    "amqplib": "^0.10.4",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.5",
     "@types/chai": "^5.0.1",
     "@types/express": "^5.0.0",
+    "@types/express-serve-static-core": "^5.0.1",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.8.6",
     "@types/supertest": "^6.0.2",
